declared members refactoring