@@ -1,33 +1,16 @@
 package com.cariochi.reflecto.methods;
 
-import com.cariochi.reflecto.base.Streamable;
-import java.lang.reflect.Type;
-import java.util.List;
-import java.util.Optional;
 import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import lombok.experimental.Accessors;
 
-import static java.util.stream.Collectors.toList;
-
-@RequiredArgsConstructor
 @Accessors(fluent = true)
-public class TargetMethods implements Streamable<TargetMethod> {
-
-    private final ReflectoMethods methods;
+public class TargetMethods extends MethodsStreamable<TargetMethod> {
 
     @Getter
-    private final Object target;
+    private final MethodsStreamable<TargetMethod> declared;
 
-    @Getter(lazy = true)
-    private final List<TargetMethod> list = methods.stream().map(m -> m.withTarget(target)).collect(toList());
-
-    public Optional<TargetMethod> find(String name, Type... argTypes) {
-        return methods.find(name, argTypes)
-                .map(m -> m.withTarget(target));
-    }
-
-    public TargetMethod get(String name, Type... argTypes) {
-        return methods.get(name, argTypes).withTarget(target);
+    public TargetMethods(ReflectoMethods methods, Object target) {
+        super(methods.declaringType(), () -> methods.stream().map(method -> method.withTarget(target)).toList());
+        declared = new MethodsStreamable<>(methods.declaringType(), () -> methods.declared().stream().map(method -> method.withTarget(target)).toList());
     }
 }
