@@ -8,13 +8,11 @@ import java.util.List;
 import java.util.stream.Stream;
 import lombok.experimental.UtilityClass;
 
-import static java.util.stream.Collectors.toList;
-
 @UtilityClass
 public class ReflectoProxy {
 
     public static ProxyType createTypeProxy(Type... types) {
-        final List<ReflectoType> reflectoTypes = Stream.of(types).map(Reflecto::reflect).collect(toList());
+        final List<ReflectoType> reflectoTypes = Stream.of(types).map(Reflecto::reflect).toList();
         final ReflectoType superClass = getSuperClass(reflectoTypes);
         final List<ReflectoType> interfaces = getInterfaces(reflectoTypes);
         return new ProxyType(superClass, interfaces);
@@ -23,7 +21,7 @@ public class ReflectoProxy {
     private static ReflectoType getSuperClass(List<ReflectoType> types) {
         final List<ReflectoType> superClasses = types.stream()
                 .filter(type -> !type.actualClass().isInterface())
-                .collect(toList());
+                .toList();
         if (superClasses.size() > 1) {
             throw new IllegalArgumentException("Single super class allowed");
         }
@@ -34,7 +32,7 @@ public class ReflectoProxy {
     private static List<ReflectoType> getInterfaces(List<ReflectoType> types) {
         return types.stream()
                 .filter(type -> type.actualClass().isInterface())
-                .collect(toList());
+                .toList();
     }
 
 }
