@@ -9,7 +9,6 @@ import org.junit.jupiter.api.Test;
 
 import static com.cariochi.reflecto.Reflecto.reflect;
 import static com.cariochi.reflecto.TestData.bug;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
 
@@ -109,7 +108,7 @@ class TargetFieldsTest {
                 .reflect("getWatchers().get(?)", 0)
                 .fields().stream()
                 .filter(field -> field.type().is(String.class))
-                .collect(toList());
+                .toList();
 
         assertThat(fields)
                 .hasSize(1)
@@ -123,7 +122,7 @@ class TargetFieldsTest {
                 .reflect("getWatchers().get(?)", 0)
                 .fields().stream()
                 .filter(field -> field.annotations().contains(Id.class))
-                .collect(toList());
+                .toList();
 
         assertThat(fields)
                 .hasSize(1)
@@ -138,7 +137,7 @@ class TargetFieldsTest {
                 .fields().stream()
                 .filter(field -> field.type().is(Integer.class))
                 .filter(field -> field.annotations().contains(Id.class))
-                .collect(toList());
+                .toList();
 
         assertThat(fields)
                 .hasSize(1)
