@@ -8,7 +8,6 @@ import java.util.List;
 import org.junit.jupiter.api.Test;
 
 import static com.cariochi.reflecto.Reflecto.reflect;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
@@ -22,7 +21,7 @@ class ReflectoTypeTest {
         assertThat(superType)
                 .isEqualTo(Types.type(Super.class, String.class));
 
-        final List<Type> superInterfaces = reflect(type).interfaces().stream().map(ReflectoType::actualType).collect(toList());
+        final List<Type> superInterfaces = reflect(type).interfaces().stream().map(ReflectoType::actualType).toList();
         assertThat(superInterfaces)
                 .containsOnly(Types.type(Interface.class, Integer.class));
     }
@@ -35,17 +34,17 @@ class ReflectoTypeTest {
         final EnumConstants<MyEnum> enumConstants = enumReflection.asEnum().constants();
 
         assertThat(enumConstants.list())
-            .containsExactly(MyEnum.FIRST, MyEnum.SECOND, MyEnum.THIRD);
+                .containsExactly(MyEnum.FIRST, MyEnum.SECOND, MyEnum.THIRD);
 
         assertThat(enumConstants.find("FIRST"))
-            .contains(MyEnum.FIRST);
+                .contains(MyEnum.FIRST);
 
         assertThat(enumConstants.find("first", true))
-            .contains(MyEnum.FIRST);
+                .contains(MyEnum.FIRST);
 
         assertThatThrownBy(() -> enumConstants.get("NONE"))
-            .isInstanceOf(NotFoundException.class)
-            .hasMessage("Enum value NONE of MyEnum class not found");
+                .isInstanceOf(NotFoundException.class)
+                .hasMessage("Enum value NONE of MyEnum class not found");
     }
 
     private static class Super<T> {
